sample-app/solutions/ads/ads-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-app-deployment
  labels:
    component: ads
    module: app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ads
      module: app
  template:
    metadata:
      labels:
        component: ads
        module: app
    spec:
      imagePullSecrets:
      - name: training-registry
      containers:
      - name: ads
        image: <image>
        ports:
        - containerPort: 8080
          name: ads-app-port
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 800Mi
