sample-app/solutions/ads/ads-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ads-app-access
  labels:
    component: ads
    module: app
spec:
  podSelector:
    matchLabels:
      component: ads
      module: app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-ingress 
          component: controller 
          origin: gardener
      namespaceSelector:
        matchLabels:
          name: kube-system
